--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,25 +4,25 @@
   "description": "Frontend pour le système électoral blockchain",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/material": "^5.15.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-router-dom": "^6.8.1",
-    "axios": "^1.6.2",
-    "web3": "^4.3.0",
-    "@mui/material": "^5.15.1",
-    "@mui/icons-material": "^5.15.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "recharts": "^2.8.0",
-    "date-fns": "^2.30.0",
     "react-hook-form": "^7.48.2",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.15.4",
+    "web-vitals": "^2.1.4",
+    "web3": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
